2003-07-03  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3291566>: Aborting standalone image load makes image directory page unusable

        Reviewed by john.

        * WebKit.pbproj/project.pbxproj: Xcode-ified WebKit.pbproj
        * WebView.subproj/WebImageView.h:
        * WebView.subproj/WebImageView.m:
        (-[WebImageView drawRect:]): layout if we need to, fill with white if we don't have an image yet
        (-[WebImageView setNeedsLayout:]): set the bit
        (-[WebImageView layout]): if we don't have an image, the frame size is the visible area so we draw white over the previous web page

2003-07-02  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Ken.

	- fixed 3304992 - REGRESSION: Every GET on an authenticated site requires a login (genentech)

	I fixed this by adding a per-window queue of waiting
	authentication requests. Before going to a later item in the
	queue, the auth handler checks if there's already a credential
	available to handle it, and if so uses that as the answer instead of
	prompting.

        * Panels.subproj/WebPanelAuthenticationHandler.h:
        * Panels.subproj/WebPanelAuthenticationHandler.m:
        (-[NSMutableDictionary _web_setObject:forUncopiedKey:]):
        (-[WebPanelAuthenticationHandler init]):
        (-[WebPanelAuthenticationHandler dealloc]):
        (-[WebPanelAuthenticationHandler enqueueChallenge:forWindow:]):
        (-[WebPanelAuthenticationHandler tryNextChallengeForWindow:]):
        (-[WebPanelAuthenticationHandler startAuthentication:window:]):
        (-[WebPanelAuthenticationHandler _authenticationDoneWithChallenge:result:]):

2003-06-30  John Sullivan  <sullivan@apple.com>

	- fixed 3310716 -- Authentication dialog could be tweaked to 
	better match guidelines

        Reviewed by Chris

        * Panels.subproj/English.lproj/WebAuthenticationPanel.nib:
	left-aligned "Name:" and "Password:" labels; slightly tweaked
	layout at right edge of sheet
