@@ -136,7 +136,10 @@
 
 - (NSDragOperation)_web_dragOperationForDraggingInfo:(id <NSDraggingInfo>)sender
 {
-    if ([sender draggingSource] != self && ![NSApp modalWindow] && [[sender draggingPasteboard] _web_bestURL]) {
+    if (![NSApp modalWindow] && 
+        ![[self window] attachedSheet] &&
+        [sender draggingSource] != self &&
+        [[sender draggingPasteboard] _web_bestURL]) {
         return NSDragOperationCopy;
     } else {
         return NSDragOperationNone;
